--- a/examples/avatar-abstract.html
+++ b/examples/avatar-abstract.html
@@ -25,7 +25,7 @@
     </div>
     <script>
         const randomUtil = new RandomUtil();
-        randomUtil.randomAvatar({ avatarOptions: { variant: "bauhaus" } });
+        randomUtil.randomAvatar({ avatarOptions: { variant: "abstract" } });
     </script>
 </body>
 </html>
