--- a/examples/text.html
+++ b/examples/text.html
@@ -140,7 +140,7 @@
         randomUtil.randomDate("Y/m/d");
         randomUtil.randomImages(1, "nature", "landscape");
         randomUtil.randomImages({ count: 10, query: "cityscape", orientation: "portrait" });
-        randomUtil.randomAvatar({ avatarOptions: { variant: "bauhaus" } });
+        randomUtil.randomAvatar({ avatarOptions: { variant: "abstract" } });
     </script>
 </body>
 
