--- a/demo/index.html
+++ b/demo/index.html
@@ -98,7 +98,7 @@
 
                     <h3>RandomImages</h3>
                     <pre><code>const randomImageCount = document.querySelectorAll("[data-random='img']").length;</code>
-<code>randomController.randomImages({ count: randomImageCount, query: "blue", orientation: "portrait", accessKey: UNSPLASH_API_KEY });</code></pre>
+<code>randomController.randomImages({ count: randomImageCount, query: "nature", orientation: "portrait", accessKey: UNSPLASH_API_KEY });</code></pre>
 
                     <h3>RandomAvatar</h3>
                     <pre><code>randomController.randomAvatar({ avatarOptions: { variant: "defaultVariant" } });</code></pre>
@@ -591,7 +591,7 @@
         randomController.randomDate("Y/m/d");
 
         const randomImageCount = document.querySelectorAll("[data-random='img']").length;
-        randomController.randomImages({ count: randomImageCount, query: "blue", orientation: "portrait", accessKey: UNSPLASH_API_KEY });
+        randomController.randomImages({ count: randomImageCount, query: "nature", orientation: "portrait", accessKey: UNSPLASH_API_KEY });
         randomController.randomAvatar({ avatarOptions: { variant: "defaultVariant" } });
     </script>
 
