--- a/demo/index.html
+++ b/demo/index.html
@@ -186,18 +186,94 @@
                             <div data-random="avatar"></div>
                             <figcaption>Variant: Default</figcaption>
                         </figure>
+                    </div>
+                    <div class="row mt-3">
                         <figure class="col">
                             <div data-random="avatar" data-random-avatar="abstract"></div>
                             <figcaption>Variant: Abstract</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="abstract"></div>
+                            <figcaption>Variant: Abstract</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="abstract"></div>
+                            <figcaption>Variant: Abstract</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="abstract"></div>
+                            <figcaption>Variant: Abstract</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="abstract"></div>
+                            <figcaption>Variant: Abstract</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="abstract"></div>
+                            <figcaption>Variant: Abstract</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="abstract"></div>
+                            <figcaption>Variant: Abstract</figcaption>
+                        </figure>
+                    </div>
+                    <div class="row mt-3">
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="pixel"></div>
+                            <figcaption>Variant: Pixel</figcaption>
                         </figure>
                         <figure class="col">
                             <div data-random="avatar" data-random-avatar="pixel"></div>
                             <figcaption>Variant: Pixel</figcaption>
                         </figure>
                         <figure class="col">
+                            <div data-random="avatar" data-random-avatar="pixel"></div>
+                            <figcaption>Variant: Pixel</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="pixel"></div>
+                            <figcaption>Variant: Pixel</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="pixel"></div>
+                            <figcaption>Variant: Pixel</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="pixel"></div>
+                            <figcaption>Variant: Pixel</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="pixel"></div>
+                            <figcaption>Variant: Pixel</figcaption>
+                        </figure>
+                        
+                    </div>
+                    <div class="row mt-3">
+                        <figure class="col">
                             <div data-random="avatar" data-random-avatar="smile"></div>
                             <figcaption>Variant: Smile</figcaption>
                         </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="smile"></div>
+                            <figcaption>Variant: Smile</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="smile"></div>
+                            <figcaption>Variant: Smile</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="smile"></div>
+                            <figcaption>Variant: Smile</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="smile"></div>
+                            <figcaption>Variant: Smile</figcaption>
+                        </figure>
+                        <figure class="col">
+                            <div data-random="avatar" data-random-avatar="smile"></div>
+                            <figcaption>Variant: Smile</figcaption>
+                        </figure>
+                    
                     </div>
                 </div>
             </div>
