improvement to Avatar

--- a/demo/index.html
+++ b/demo/index.html
@@ -135,15 +135,15 @@
 
                     <div class="row">
                         <figure class="col">
-                            <img style="max-width:300px;" src="" data-random="img" />
+                            <img style="max-width:300px;" data-random="img" />
                             <figcaption>Query: Default</figcaption>
                         </figure>
                         <figure class="col">
-                            <img style="max-width:300px;" src="" data-random="img" data-random-img="person, face" />
+                            <img style="max-width:300px;" data-random="img" data-random-img="person, face" />
                             <figcaption>Query: "Person"</figcaption>
                         </figure>
                         <figure class="col">
-                            <img style="max-width:300px;" src="" data-random="img" data-random-img="school bus" />
+                            <img style="max-width:300px;" data-random="img" data-random-img="school bus" />
                             <figcaption>Query: "School Bus"</figcaption>
                         </figure>
                     </div>
